--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -1,127 +1,121 @@
-
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
 
-<body class="g-sidenav-show  bg-gray-200">
-  <%- include("../admin/layouts/adminSideBar.ejs") %>
-    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-      <!-- Navbar -->
-      <%- include("../admin/layouts/adminNavBar.ejs") %>
-      <!-- End Navbar -->
-      <div class="container-fluid py-4">
-        <div class="row">
-          <div class="col-12 , elemDesign">
-            <div class="card my-4">
-             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
-                <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                    <!-- <a href="">
-                        <button type="button" class="btn btn-success btn-md float-right mr-5" id="addButton">Add</button>
-                      </a> -->
-                  <h6 class="text-white text-capitalize ps-3">PRODUCT</h6>
-                </div>
-              </div>
-              <div class="card-body px-0 pb-2 ">
-                <div class="table-responsive p-0">
-                
+  <body class="g-sidenav-show  bg-gray-200">
+    <%- include("../admin/layouts/adminSideBar.ejs") %>
+      <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+        <!-- Navbar -->
+        <%- include("../admin/layouts/adminNavBar.ejs") %>
+          <!-- End Navbar -->
+          <div class="container-fluid py-4">
+            <div class="row">
+              <div class="col-12 , elemDesign">
+                <div class="card my-4">
+                  <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
+                    <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
 
-
-
-
-                      <form class="forms-sample " action="/admin/addproduct" method="post" enctype="multipart/form-data">
-
-              <div class="form-group  row">
-                <div class="col-6  text-dark">
-                  <label for="exampleInputName1">Product Name</label>
-                  <input type="text" class="form-control  text-dark" name="productName" id="exampleInputName1"
-                    placeholder="Name" required>
-                </div>
-                <div class="col-6">
-                  <label for="exampleInputName1">Price</label>
-                  <input type="number" class="form-control text-dark" id="exampleInputName1" name="price"
-                    placeholder="price" required>
-                </div>
-
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group row">
-                    <div class="col-sm-12">
-                      <label class="col-sm-3 col-form-label">Category</label>
-                      <select name="category" class="form-control text-dark" required>
-                        <option value="" disabled selected>Select Category</option>
-                        <% for(let i=0;i< cartData.length;i++){ %>
-                        <option>
-                            <%= cartData[i].name %>
-                        </option>
-                        <% } %>
-                      </select>
+                      <h6 class="text-white text-capitalize ps-3">ADD PRODUCT</h6>
                     </div>
                   </div>
-                </div>
-                
-              </div>
+                  <div class="card-body px-0 pb-2 ">
 
-              <div class="col-6">
-                <label for="exampleInputName1">status</label>
-                <input type="text" class="form-control text-dark" id="exampleInputName1" name="status"
-                  placeholder="status" required>
-              </div>
+                      <form class="forms-sample " action="/admin/addproduct" method="post"
+                        enctype="multipart/form-data" style="background-color: #344767;">
 
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group row">
-                    <div class="col-sm-12">
-                      <label class="col-sm-3 col-form-label">quantity</label>
-                      <input type="number" class="form-control text-light" id="exampleInputName1" name="quantity"
-                    placeholder="Enter Stock" required>
-                    </div>
+                        <div class="form-group  row">
+                          <div class="col-6  text-dark">
+                            <label for="exampleInputName1" class="font-weight-bold pl-3" style="color: #ffffff;">Product Name</label>
+                            <input type="text" class="form-control  " name="productName" id="exampleInputName1"
+                              placeholder="Name"  style="background-color: rgb(13, 30, 59);padding-left: 15px;" required>
+                          </div>
+                          <div class="col-6">
+                            <label for="exampleInputName1" class="font-weight-bold pl-3" style="color: #ffffff;">Price</label>
+                            <input type="number" class="form-control " id="exampleInputName1" name="price"
+                              placeholder="price" style="background-color: rgb(13, 30, 59);" required>
+                          </div>
+
+                        </div>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group row">
+                              <div class="col-sm-12">
+                                <label class="col-sm-3 col-form-label" class="font-weight-bold pl-3" style="color: #ffffff;">Category</label>
+                                <select name="category" class="form-control" style="background-color: rgb(13, 30, 59);" required>
+                                  <option value="" disabled selected  >Select Category</option>
+                                  <% for(let i=0;i< cartData.length;i++){ %>
+                                    <option>
+                                      <%= cartData[i].name %>
+                                    </option>
+                                    <% } %>
+                                </select>
+                              </div>
+                            </div>
+                          </div>
+
+                        </div>
+
+                        <div class="col-6">
+                          <label for="exampleInputName1" class="font-weight-bold pl-1" style="color: #ffffff;">status</label>
+                          <input type="text" class="form-control text-dark" id="exampleInputName1" name="status"
+                            placeholder="status"  style="background-color: rgb(13, 30, 59);" required>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group row">
+                              <div class="col-sm-12">
+                                <label class="col-sm-3 col-form-label" class="font-weight-bold pl-3" style="color: #ffffff;">quantity</label>
+                                <input type="number" class="form-control text-light" id="exampleInputName1"
+                                  name="quantity" placeholder="Enter Stock"  style="background-color: rgb(13, 30, 59);"required>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="form-group mt-2">
+                          <label for="exampleTextarea1" class="font-weight-bold pl-3 " style="color: #ffffff;">Description</label>
+                          <textarea name="description" class="form-control text-light" id="exampleTextarea1" rows="4"  style="background-color: rgb(13, 30, 59);"
+                            required></textarea>
+                        </div>
+                        <div class="">
+                          <!-- <label class="col-sm-3 col-form-label">Images</label> -->
+                          <div class="row d-flex justify-content-center ">
+
+                            <!-- <div class="row d-flex justify-content-between "> -->
+
+                            <div class="col-lg-3 col-md-6 rounded-image-preview">
+                              <label class="upload__btn ms-3">
+                                <p class="font-weight-bold pl-1" style="color: #ffffff;">Upload images</p>
+                                <input type="file" id="formFile" name="image" multiple data-max_length="20"
+                                  class="upload__inputfile">
+                              </label>
+                            </div>
+
+                          </div>
+
+
+
+
+                        </div>
+
+
+                        <button type="submit" class="btn btn-lg btn-primary mr-2 mt-5">Add product</button>
+                      </form>
+
+
+
+
+                    
                   </div>
-                </div>
-              </div>
-
-              <div class="form-group mt-2">
-                <label for="exampleTextarea1">Description</label>
-                <textarea name="description" class="form-control text-light" id="exampleTextarea1" rows="4" required></textarea>
-              </div>
-              <div class="">
-                <!-- <label class="col-sm-3 col-form-label">Images</label> -->
-                <div class="row d-flex justify-content-center ">
-
-                  <!-- <div class="row d-flex justify-content-between "> -->
-
-                    <div class="col-lg-3 col-md-6 rounded-image-preview">
-                      <label class="upload__btn ms-3" >
-                        <p>Upload images</p>
-                        <input type="file" id="formFile" name="image"
-                        multiple data-max_length="20" class="upload__inputfile">
-                      </label>
-                    </div>
-
-                  </div>
-
-
-
-
-                </div>
-
-
-                <button type="submit" class="btn btn-lg btn-primary mr-2 mt-5">Add product</button>
-            </form>
-
-
-
-                  
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-    
-      </div>
-    </main>
-    </main>
 
-    <!-- <script>
+          </div>
+      </main>
+      </main>
+
+      <!-- <script>
   
 
  
@@ -187,4 +181,4 @@
         
       </script> -->
 
-    <%- include("../admin/layouts/adminFooter.ejs") %>
+      <%- include("../admin/layouts/adminFooter.ejs") %>
