--- a/public/userAssets/css/main.css
+++ b/public/userAssets/css/main.css
@@ -273,6 +273,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   position: fixed;
   z-index: 1100;
   background-color: transparent;
+  /* background-color: #000000; */
   width: 100%;
   height: 84px;
   top: 40px;
@@ -290,7 +291,9 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .header-v3 .wrap-menu-desktop {
-  background-color: transparent;
+  /* background-color: transparent; */
+  background-color: #000000;
+
   top: 0;
   border-bottom: 1px solid rgba(255,255,255,0.1);
 }
@@ -1457,8 +1460,8 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   background-color: rgba(0,0,0,0.9);
 }
 
-.prev-slick3 {left: 0px;}
-.next-slick3 {right: 0px;}
+.prev-slick3 {left: -98px;}
+.next-slick3 {right: 110px;}
 
 /*---------------------------------------------*/
 .wrap-slick3-dots {
